Style main content

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@
     margin: 0;
     padding: 0;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    background-color: rgb(215, 170, 144);
+    font-family: "Open Sans", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+}
