--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -15,3 +15,15 @@ footer a:hover {
     color: #fff;
     text-decoration: underline;
 }
+
+@media (min-width: 768px) {
+    footer {
+        font-size: 1.1rem;
+    }
+}
+
+@media (min-width: 992px) {
+    footer {
+        font-size: 1.2rem;
+    }
+}
