--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,5 @@
 header {
+    background-color: rgb(0, 128, 255);
     position: sticky;
     top: 0;
     z-index: 10;
@@ -6,7 +7,6 @@ header {
 
 nav {
     align-items: center;
-    background-color: rgb(0, 128, 255);
     display: grid;
     grid-template-columns: auto 3rem;
     grid-template-rows: 3.5rem;
@@ -63,7 +63,67 @@ nav {
 }
 
 #dark-light-icon {
+    border-radius: 50%;
     color: #fff;
-    font-size: 2rem;
+    cursor: pointer;
+    font-size: 1.5rem;
     grid-column: 2 / 3;
+    /* transition: transform 0.3s; */
+}
+
+#dark-light-icon:hover {
+    background-color: rgb(0, 64, 128);
+    outline: 0.5rem solid rgb(0, 64, 128);
+}
+
+/* #dark-light-icon:active {
+    transform: rotate(180deg);
+} */
+
+@media (min-width: 576px) {
+    nav {
+        grid-template-columns: 32.25rem 1.5rem;  /*  540px => 33.75rem  */
+        justify-content: center;
+        justify-items: start;
+    }
+
+    #main-website-link {
+        margin-left: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    nav {
+        grid-template-columns: 43rem 2rem;  /*  720px => 45rem  */
+        grid-template-rows: 4rem;
+    }
+
+    #main-website-link {
+        gap: 0rem 0.3rem;
+        grid-template-columns: 3rem auto;
+        grid-template-rows: 1.68rem 1.32rem;
+    }
+
+    #main-website-link > img {
+        height: 3rem;
+        width: 3rem;
+    }
+
+    #logo-first-name {
+        font-size: 1.68rem;
+    }
+
+    #logo-last-name {
+        font-size: 1.32rem;
+    }
+
+    #dark-light-icon {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    nav {
+        grid-template-columns: 58rem 2rem;  /*  960px => 60rem  */
+    }
 }
