--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,14 +1,8 @@
 main {
-    background-color: rgb(255, 228, 196);
     padding: 0 0.5rem;
 }
 
-main > section {
-    padding: 3rem 0 0;
-}
-
 h1 {
-    /* background-color: green; */
     color: rgb(255, 32, 0);
     font-family: "Nunito", sans-serif;
     font-size: 2rem;
@@ -23,7 +17,7 @@ h2 {
     color: rgb(0, 50, 150);
     font-family: "Nunito", sans-serif;
     font-size: 1.5rem;
-    margin: 0 0 1rem;
+    margin: 3rem 0 1rem;
 }
 
 h3 {
@@ -35,15 +29,15 @@ p {
     margin: 1rem 0;
 }
 
-#video {
-    display: block;
-    margin: 2rem auto;
-    /* max-width: 560px; */
-    width: 100%;
+#intro {
+    margin: 2rem 0 0;
 }
 
-#instructions h2:last-of-type {
-    margin-top: 4rem;
+#video {
+    display: block;
+    height: 315px;
+    margin: 2rem auto;
+    width: 100%;
 }
 
 #instructions ul {
@@ -66,10 +60,9 @@ hr {
     width: 90%;
 }
 
-/* .final-messages {
-    margin: 10px auto;
-    max-width: 700px;
-} */
+#contact {
+    margin: 4rem 0 0;
+}
 
 form {
     align-items: center;
@@ -83,21 +76,21 @@ form {
     border-radius: 0.5rem;
     font-size: 1rem;
     padding: 0.5rem;
-    width: 250px;
+    width: 16rem;
 }
 
 #submit {
     background-color: rgb(255, 100, 0);
     border: none;
-    border-radius: 7px;
-    box-shadow: 0 5px #a50;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.4rem #a50;
     color: #420;
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
-    margin-top: 5px;
-    padding: 5px;
-    width: 150px;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    width: 10rem;
 }
 
 #submit:hover {
@@ -105,15 +98,105 @@ form {
 }
 
 #submit:active {
-    box-shadow: 0 3px #a50;
-    transform: translateY(2px);
+    box-shadow: 0 0.2rem #a50;
+    transform: translateY(0.2rem);
 }
 
 #thanks {
-    /* background-color: red; */
     font-size: 1.1rem;
     font-weight: bold;
     margin: 2rem 0 0;
     padding: 0 0 2rem;
     text-align: center;
+}
+
+@media (min-width: 576px) {
+    main {
+        padding: 0;
+        max-width: 33.75rem;  /*  540px => 33.75rem  */
+        margin: 0 auto;
+    }
+
+    #video {
+        height: 303.75px;
+    }
+}
+
+@media (min-width: 768px) {
+    main {
+        max-width: 45rem;  /*  720px => 45rem  */
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        max-width: 400px;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+
+    h3 {
+        font-size: 1.25rem;
+    }
+
+    p {
+        margin: 1.1rem 0;
+    }
+
+    #video {
+        height: 405px;
+    }
+
+    #email {
+        font-size: 1.1rem;
+        width: 17rem;
+    }
+
+    #submit {
+        font-size: 1.1rem;
+        width: 10rem;
+    }
+
+    #thanks {
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    main {
+        max-width: 60rem;  /*  960px => 60rem  */
+    }
+
+    h1 {
+        max-width: 100%;
+    }
+
+    p {
+        margin: 1.2rem 0;
+    }
+
+    #video {
+        width: 45rem;
+    }
+
+    form {
+        margin: 3rem 0;
+    }
+
+    #email {
+        font-size: 1.2rem;
+        width: 18rem;
+    }
+
+    #submit {
+        font-size: 1.2rem;
+        width: 11rem;
+    }
+
+    #thanks {
+        font-size: 1.3rem;
+        margin: 3rem 0 0;
+        padding: 0 0 3rem;
+    }
 }
