--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,4 @@
 header {
-    background-color: rgb(0, 128, 255);
     position: sticky;
     top: 0;
     z-index: 10;
@@ -26,7 +25,7 @@ nav {
 }
 
 #main-website-link > img {
-    border: 2px solid #511;
+    border: 2px solid #322;
     border-radius: 50%;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
@@ -64,21 +63,16 @@ nav {
 
 #dark-light-icon {
     border-radius: 50%;
-    color: #fff;
     cursor: pointer;
     font-size: 1.5rem;
     grid-column: 2 / 3;
-    /* transition: transform 0.3s; */
+    transition: color 0.5s, transform 0.5s;
 }
 
 #dark-light-icon:hover {
-    background-color: rgb(0, 64, 128);
-    outline: 0.5rem solid rgb(0, 64, 128);
+    background-color: rgb(0, 84, 148);
+    outline: 0.5rem solid rgb(0, 84, 148);
 }
-
-/* #dark-light-icon:active {
-    transform: rotate(180deg);
-} */
 
 @media (min-width: 576px) {
     nav {
