--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -7,22 +7,22 @@ h1 {
     font-family: "Nunito", sans-serif;
     font-size: 2rem;
     margin: 0 auto;
-    max-width: 300px;
+    max-width: 18.75rem;  /*  300px => 18.75rem  */
     padding: 2rem 0 0;
     text-align: center;
     text-shadow: 1px 1px 1px #000;
 }
 
 h2 {
-    color: rgb(0, 50, 150);
     font-family: "Nunito", sans-serif;
     font-size: 1.5rem;
     margin: 3rem 0 1rem;
 }
 
 h3 {
-    color: rgb(200, 25, 0);
+    color: rgb(250, 100, 0);
     font-size: 1rem;
+    text-shadow: 1px 1px 1px #000;
 }
 
 p {
@@ -54,7 +54,7 @@ p {
 
 hr {
     border-bottom: none;
-    border-top: 2px solid rgb(150, 0, 0);
+    border-top: 2px solid rgb(250, 100, 0);
     height: 0;
     margin: 2rem auto 1.5rem;
     width: 90%;
